# misis2024s-23-04-derznovenko-a-a

./: .gitignore  CMakeLists.txt  codeforces.id  status.md
prj.app/: CMakeLists.txt
prj.app/roborun/: CMakeLists.txt  roborun.cpp  roborun.hpp
prj.app/timing-q/: CMakeLists.txt  timing-q.cpp
prj.codeforces/: 0050a.cpp  0071a.cpp  0158a.cpp  0281a.cpp  0282a.cpp  0977a.cpp  1360a.cpp  1374a.cpp  1426a.cpp  1676b.cpp  1703a.cpp  1722a.cpp  1873b.cpp  1937a.cpp  1944a.cpp  1944b.cpp  1948b.cpp  1950b.cpp  1973b.cpp  1974a.cpp  1974b.cpp  1975a.cpp  1975b.cpp  1976a.cpp  1977a.cpp  1977b.cpp  1980a.cpp  1980b.cpp  1981a.cpp  1981b.cpp  CMakeLists.txt
prj.lab/: CMakeLists.txt
prj.lab/Rational/: rational.cpp  rational.hpp
prj.lab/bitset/: bitset.cpp  bitset.hpp
prj.lab/complex/: complex.cpp  complex.hpp
prj.lab/dynarr/: dynarr.cpp  dynarr.hpp
prj.lab/queuearr/: queuearr.cpp  queuearr.hpp
prj.lab/queuelst/: queuelst.cpp  queuelst.hpp
prj.lab/queuelstpr/: queuelstpr.cpp  queuelstpr.hpp
prj.lab/stackarr/: stackarr.cpp  stackarr.hpp
prj.lab/stackarrt/: CMakeLists.txt  stackarrt.hpp
prj.lab/stacklst/: stacklst.cpp  stacklst.hpp
prj.lab/stacklstt/: CMakeLists.txt  stacklstt.hpp
prj.test/: CMakeLists.txt  doctest.h  test_bitset.cpp  test_complex.cpp  test_dynarr.cpp  test_queuearr.cpp  test_queuelst.cpp  test_queuelstpr.cpp  test_rational.cpp  test_stackarr.cpp  test_stackarrt.cpp  test_stacklst.cpp  test_stacklstt.cpp
