add_executable(1722a 1722a.cpp)
add_executable(1374a 1374a.cpp)
add_executable(1426a 1426a.cpp)
add_executable(1873b 1873b.cpp)
add_executable(1360a 1360a.cpp)
add_executable(0071a 0071a.cpp)
add_executable(0158a 0158a.cpp)
add_executable(0282a 0282a.cpp)
add_executable(0050a 0050a.cpp)
add_executable(0281a 0281a.cpp)
add_executable(0977a 0977a.cpp)
add_executable(1703a 1703a.cpp)
add_executable(1676b 1676b.cpp)
add_executable(1950b 1950b.cpp)
add_executable(1948b 1948b.cpp)
add_executable(1944a 1944a.cpp)
add_executable(1937a 1937a.cpp)
