add_executable(1722a 1722a.cpp)
add_executable(1374a 1374a.cpp)
add_executable(1426a 1426a.cpp)
add_executable(1873b 1873b.cpp)
add_executable(1360a 1360a.cpp)
add_executable(0071a 0071a.cpp)
add_executable(0158a 0158a.cpp)
add_executable(0282a 0282a.cpp)
add_executable(0050a 0050a.cpp)
add_executable(0281a 0281a.cpp)
add_executable(0977a 0977a.cpp)
add_executable(1703a 1703a.cpp)
add_executable(1676b 1676b.cpp)
add_executable(1950b 1950b.cpp)
add_executable(1948b 1948b.cpp)
add_executable(1944a 1944a.cpp)
add_executable(1937a 1937a.cpp)
add_executable(1944b 1944b.cpp)
add_executable(1942b 1942b.cpp)
add_executable(1941b 1941b.cpp)
add_executable(1937b 1937b.cpp)
add_executable(1981a 1981a.cpp)
add_executable(1981b 1981b.cpp)
add_executable(1980a 1980a.cpp)
add_executable(1980b 1980b.cpp)
add_executable(1977a 1977a.cpp)
add_executable(1977b 1977b.cpp)
add_executable(1976a 1976a.cpp)
add_executable(1975a 1975a.cpp)
add_executable(1975b 1975b.cpp)
add_executable(1974a 1974a.cpp)
add_executable(1974b 1974b.cpp)
add_executable(1973b 1973b.cpp)


